--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar bg-black d-flex">
             <div class="navContainer d-flex">
                 <img src="https://play-lh.googleusercontent.com/bo7Qeq8XZVI4hyXTVyG7Oi3hMiqADqruYeyQWqzzJzNHCYNVLmpAne0XP4_JH2AJ1tE" class="img-fluid rounded-5 p-2" style="width: 100px; height: 100px;" alt="...">
-                <span id="title" class="navbar-brand m-2 p-2 mb-0 mt-4 h1 text-white">Welcome, John Doe !</span>
+                <h1 id="title" class="navbar-brand m-2 p-2 mb-0 mt-4 text-white"></h1>
             </div>
         </nav>
     
